--- a/Aulas_Django/basico/home/templates/assets_home/index.html
+++ b/Aulas_Django/basico/home/templates/assets_home/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>HOME</h1>
-    <H3><i>Home 3</i></H3>
+    {% include "global/base.html" %}
+    <h4>Salve, salve !!! </h4>
 </body>
 </html>
