--- a/Aulas_Django/basico/blog/templates/assets_blog/exemplo.html
+++ b/Aulas_Django/basico/blog/templates/assets_blog/exemplo.html
@@ -1,12 +1,15 @@
+{% load static %}
+{% include 'assets_blog/blog.html' %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="">    
+    <link rel="stylesheet" href="{% static 'global/css/red.css' %}">
 </head>
 <body>
-    <h2>MEU BLOG</h2>
+    <h2>ESTE É MEU EXEMPLO</h2>
 </body>
 </html>
